# text-show

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  cabal.haskell-ci  cabal.project  text-show.cabal
.github/workflows/: haskell-ci.yml
benchmarks/: Bench.hs
include/: generic.h  inline.h  overlap.h  utils.h
shared/TextShow/TH/: Names.hs
src/: TextShow.hs
src/Text/Show/: Text.hs
src/Text/Show/Text/: Char.hs  Class.hs  Classes.hs  Containers.hs  Control.hs  Data.hs  Float.hs  Foreign.hs  Functions.hs  GHC.hs  Generic.hs  Instances.hs  Int.hs  Integer.hs  Newtypes.hs  Numeric.hs  Ptr.hs  System.hs  TH.hs  Text.hs  Tuple.hs  Util.hs  Utils.hs
src/Text/Show/Text/Control/: Applicative.hs  Concurrent.hs  Exception.hs
src/Text/Show/Text/Control/Monad/: ST.hs
src/Text/Show/Text/Data/: Array.hs  Bool.hs  ByteString.hs  Char.hs  Complex.hs  Containers.hs  Data.hs  Dynamic.hs  Either.hs  Enum.hs  Fixed.hs  Floating.hs  Integral.hs  List.hs  Maybe.hs  Monoid.hs  OldTypeable.hs  Ord.hs  Proxy.hs  Ratio.hs  Text.hs  Time.hs  Tuple.hs  Typeable.hs  Version.hs  Void.hs
src/Text/Show/Text/Data/Functor/: Identity.hs
src/Text/Show/Text/Data/Type/: Coercion.hs  Equality.hs
src/Text/Show/Text/Data/Typeable/: Utils.hs
src/Text/Show/Text/Debug/: Trace.hs
src/Text/Show/Text/Debug/Trace/: Generic.hs  TH.hs
src/Text/Show/Text/Foreign/: Ptr.hs
src/Text/Show/Text/Foreign/C/: Types.hs
src/Text/Show/Text/GHC/: Event.hs  Fingerprint.hs  Generics.hs  StaticPtr.hs  Stats.hs  TypeLits.hs
src/Text/Show/Text/GHC/Conc/: Windows.hs
src/Text/Show/Text/Numeric/: Natural.hs
src/Text/Show/Text/System/: Exit.hs  IO.hs
src/Text/Show/Text/TH/: Internal.hs
src/Text/Show/Text/Text/: Read.hs
src/TextShow/: Classes.hs  FromStringTextShow.hs  Functions.hs  Generic.hs  Instances.hs  Options.hs  TH.hs  Utils.hs
src/TextShow/Control/: Applicative.hs  Concurrent.hs  Exception.hs
src/TextShow/Control/Monad/: ST.hs
src/TextShow/Data/: Array.hs  Bool.hs  ByteString.hs  Char.hs  Complex.hs  Data.hs  Dynamic.hs  Either.hs  Fixed.hs  Floating.hs  Integral.hs  List.hs  Maybe.hs  Monoid.hs  OldTypeable.hs  Ord.hs  Proxy.hs  Ratio.hs  Semigroup.hs  Text.hs  Tuple.hs  Typeable.hs  Vector.hs  Version.hs  Void.hs
src/TextShow/Data/Array/: Byte.hs
src/TextShow/Data/Functor/: Compose.hs  Identity.hs  Product.hs  Sum.hs
src/TextShow/Data/List/: NonEmpty.hs
src/TextShow/Data/Text/Builder/: Linear.hs
src/TextShow/Data/Type/: Coercion.hs  Equality.hs
src/TextShow/Data/Typeable/: Utils.hs
src/TextShow/Debug/: Trace.hs
src/TextShow/Debug/Trace/: Generic.hs  TH.hs
src/TextShow/Foreign/: Ptr.hs
src/TextShow/Foreign/C/: Types.hs
src/TextShow/GHC/: Event.hs  Fingerprint.hs  Generics.hs  Stack.hs  StaticPtr.hs  Stats.hs  TypeLits.hs
src/TextShow/GHC/Conc/: Windows.hs
src/TextShow/GHC/RTS/: Flags.hs
src/TextShow/Numeric/: Natural.hs
src/TextShow/System/: Exit.hs  IO.hs
src/TextShow/System/Posix/: Types.hs
src/TextShow/TH/: Internal.hs  Names.hs
src/TextShow/Text/: Read.hs
tests/: Derived.hs  Instances.hs  Properties.hs  TransformersCompat.hs
tests/Derived/: DataFamilies.hs  DatatypeContexts.hs  ExistentialQuantification.hs  Infix.hs  MagicHash.hs  PolyKinds.hs  RankNTypes.hs  Records.hs  TypeFamilies.hs  TypeSynonyms.hs
tests/Instances/: BaseAndFriends.hs  Derived.hs  FromStringTextShow.hs  Generic.hs  Options.hs  Utils.hs
tests/Instances/Control/: Applicative.hs  Concurrent.hs  Exception.hs
tests/Instances/Control/Monad/: ST.hs
tests/Instances/Data/: ByteString.hs  Char.hs  Data.hs  Dynamic.hs  Floating.hs  Monoid.hs  OldTypeable.hs  Ord.hs  Proxy.hs  Semigroup.hs  Text.hs  Tuple.hs  Typeable.hs  Version.hs
tests/Instances/Data/Functor/: Compose.hs  Identity.hs  Product.hs  Sum.hs
tests/Instances/Data/List/: NonEmpty.hs
tests/Instances/Data/Text/Builder/: Linear.hs
tests/Instances/Data/Type/: Coercion.hs  Equality.hs
tests/Instances/Foreign/: Ptr.hs
tests/Instances/Foreign/C/: Types.hs
tests/Instances/GHC/: Event.hs  Fingerprint.hs  Generics.hs  Stack.hs  StaticPtr.hs  Stats.hs  TypeLits.hs
tests/Instances/GHC/Conc/: Windows.hs
tests/Instances/GHC/RTS/: Flags.hs
tests/Instances/Numeric/: Natural.hs
tests/Instances/System/: Exit.hs  IO.hs
tests/Instances/System/Posix/: Types.hs
tests/Instances/Text/: Read.hs
tests/Instances/Utils/: GenericArbitrary.hs
tests/Properties/: BaseAndFriends.hs  Builder.hs  Derived.hs  MkShow.hs  Utils.hs
tests/Spec/: BaseAndFriendsSpec.hs  BuilderSpec.hs  DerivedSpec.hs  FromStringTextShowSpec.hs  FunctionsSpec.hs  GenericSpec.hs  MkShowSpec.hs  OptionsSpec.hs  Utils.hs
tests/Spec/Control/: ApplicativeSpec.hs  ConcurrentSpec.hs  ExceptionSpec.hs
tests/Spec/Control/Monad/: STSpec.hs
tests/Spec/Data/: ArraySpec.hs  BoolSpec.hs  ByteStringSpec.hs  CharSpec.hs  ComplexSpec.hs  DataSpec.hs  DynamicSpec.hs  EitherSpec.hs  FixedSpec.hs  FloatingSpec.hs  IntegralSpec.hs  ListSpec.hs  MaybeSpec.hs  MonoidSpec.hs  OldTypeableSpec.hs  OrdSpec.hs  ProxySpec.hs  RatioSpec.hs  SemigroupSpec.hs  TextSpec.hs  TupleSpec.hs  TypeableSpec.hs  VectorSpec.hs  VersionSpec.hs
tests/Spec/Data/Array/: ByteSpec.hs
tests/Spec/Data/Functor/: ComposeSpec.hs  IdentitySpec.hs  ProductSpec.hs  SumSpec.hs
tests/Spec/Data/List/: NonEmptySpec.hs
tests/Spec/Data/Text/Builder/: LinearSpec.hs
tests/Spec/Data/Type/: CoercionSpec.hs  EqualitySpec.hs
tests/Spec/Derived/: DataFamiliesSpec.hs  DatatypeContextsSpec.hs  ExistentialQuantificationSpec.hs  InfixSpec.hs  MagicHashSpec.hs  PolyKindsSpec.hs  RankNTypesSpec.hs  RecordsSpec.hs  TypeFamiliesSpec.hs  TypeSynonymsSpec.hs
tests/Spec/Foreign/: PtrSpec.hs
tests/Spec/Foreign/C/: TypesSpec.hs
tests/Spec/GHC/: EventSpec.hs  FingerprintSpec.hs  GenericsSpec.hs  StackSpec.hs  StaticPtrSpec.hs  StatsSpec.hs  TypeLitsSpec.hs
tests/Spec/GHC/Conc/: WindowsSpec.hs
tests/Spec/GHC/RTS/: FlagsSpec.hs
tests/Spec/Numeric/: NaturalSpec.hs
tests/Spec/System/: ExitSpec.hs  IOSpec.hs
tests/Spec/System/Posix/: TypesSpec.hs
tests/Spec/Text/: ReadSpec.hs
(+2 files in other folders)
