name:                text-show
version:             0.8.1
synopsis:            Efficient conversion of values into Text
description:         @text-show@ offers a replacement for the @Show@ typeclass intended
                     for use with @Text@ instead of @String@s. This package was created
                     in the spirit of
                     @<http://hackage.haskell.org/package/bytestring-show bytestring-show>@.
                     .
                     At the moment, @text-show@ provides @Show@ instances for most data
                     types in the @<http://hackage.haskell.org/package/array array>@,
                     @<http://hackage.haskell.org/package/base base>@,
                     @<http://hackage.haskell.org/package/bytestring bytestring>@, and
                     @<http://hackage.haskell.org/package/text text>@ packages.
                     Therefore, much of the source code for @text-show@ consists of
                     borrowed code from those packages in order to ensure that the
                     behaviors of the two @Show@ typeclasses coincide.
                     .
                     For most uses, simply importing "Text.Show.Text"
                     will suffice:
                     .
                     @
                        module Main where
                        .
                        import Data.Text (Text)
                        import Prelude hiding (Show(..), print)
                        import Text.Show.Text
                        .
                        hello :: Text
                        hello = show (Just \"Hello, World!\")
                        .
                        main :: IO ()
                        main = print hello
                     @
                     .
                     If you desire it, there are also monomorphic versions of the @showb@
                     function available in the submodules of "Text.Show.Text". A naming
                     convention is present in which functions that show different values
                     depending on the precedence end with @Prec@ (e.g., @showbIntPrec@),
                     whereas functions that show the same values regardless of
                     precedence do not end with @Prec@ (e.g., @showbBool@).
                     .
                     Support for automatically deriving @Show@ instances can be found
                     in the "Text.Show.Text.TH" and "Text.Show.Text.Generic" modules.
                     If you don't know which one to use, use @Text.Show.Text.TH@.
homepage:            https://github.com/RyanGlScott/text-show
bug-reports:         https://github.com/RyanGlScott/text-show/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@ku.edu>
stability:           Experimental
copyright:           (C) 2014-2015 Ryan Scott
category:            Text
build-type:          Simple
tested-with:         GHC == 7.0.4, GHC == 7.2.2, GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1
extra-source-files:  CHANGELOG.md, README.md, include/*.h
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/text-show

library
  exposed-modules:     Text.Show.Text
                       Text.Show.Text.Debug.Trace
                       Text.Show.Text.Debug.Trace.TH
                       Text.Show.Text.TH

                       Text.Show.Text.Control.Applicative
                       Text.Show.Text.Control.Concurrent
                       Text.Show.Text.Control.Exception
                       Text.Show.Text.Control.Monad.ST
                       Text.Show.Text.Data.Array
                       Text.Show.Text.Data.Bool
                       Text.Show.Text.Data.ByteString
                       Text.Show.Text.Data.Char
                       Text.Show.Text.Data.Complex
                       Text.Show.Text.Data.Data
                       Text.Show.Text.Data.Dynamic
                       Text.Show.Text.Data.Either
                       Text.Show.Text.Data.Fixed
                       Text.Show.Text.Data.Floating
                       Text.Show.Text.Data.Functor.Identity
                       Text.Show.Text.Data.Integral
                       Text.Show.Text.Data.List
                       Text.Show.Text.Data.Maybe
                       Text.Show.Text.Data.Monoid
                       Text.Show.Text.Data.Ord
                       Text.Show.Text.Data.Proxy
                       Text.Show.Text.Data.Ratio
                       Text.Show.Text.Data.Text
                       Text.Show.Text.Data.Tuple
                       Text.Show.Text.Data.Typeable
                       Text.Show.Text.Data.Version
                       Text.Show.Text.Data.Void
                       Text.Show.Text.Foreign.C.Types
                       Text.Show.Text.Foreign.Ptr
                       Text.Show.Text.Functions
                       Text.Show.Text.Numeric.Natural
                       Text.Show.Text.System.Exit
                       Text.Show.Text.System.IO
                       Text.Show.Text.System.Posix.Types
                       Text.Show.Text.Text.Read

                       -- Only exports functions if using Windows
                       Text.Show.Text.GHC.Conc.Windows

                       -- Only exports functions if base >= 4.4
                       Text.Show.Text.GHC.Fingerprint
                       -- Only exports functions if base >= 4.4 and not using Windows
                       Text.Show.Text.GHC.Event

                       -- Only exports functions if GHC >= 7.2
                       Text.Show.Text.Debug.Trace.Generic
                       Text.Show.Text.Generic
                       Text.Show.Text.GHC.Generics

                       -- Only exports functions if base >= 4.5
                       Text.Show.Text.GHC.Stats

                       -- Only exports functions if base >= 4.6
                       Text.Show.Text.GHC.TypeLits

                       -- Only exports functions if base >= 4.7
                       Text.Show.Text.Data.Type.Coercion
                       Text.Show.Text.Data.Type.Equality
                       -- Only exports functions if base >= 4.7 && < 4.8
                       Text.Show.Text.Data.OldTypeable

                       -- Only exports functions if base >= 4.8
                       Text.Show.Text.GHC.RTS.Flags
                       Text.Show.Text.GHC.StaticPtr
  other-modules:       Text.Show.Text.Classes
                       Text.Show.Text.Data.Typeable.Utils
                       Text.Show.Text.Instances
                       Text.Show.Text.TH.Internal
                       Text.Show.Text.Utils
  build-depends:       array              >= 0.3     && < 0.6
                     , base               >= 4.3     && < 5
                     , base-compat        >= 0.8.1   && < 1
                     , bytestring         >= 0.9     && < 0.11
                     , bytestring-builder
                     , ghc-prim
                     , integer-gmp
                     , nats               >= 0.1     && < 2
                     , semigroups         >= 0.16.1  && < 1
                     , tagged             >= 0.4.4   && < 1
                     , text               >= 0.11.1  && < 1.3
                     , template-haskell   >= 2.5     && < 2.11
                     , transformers       >= 0.2.1   && < 0.5
                     , void               >= 0.5     && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  include-dirs:        include
  includes:            inline.h
                     , utils.h
  install-includes:    inline.h
                     , utils.h

test-suite text-show-spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Derived

                       Instances.Derived
                       Instances.FromStringTextShow
                       Instances.Utils

                       Instances.Control.Applicative
                       Instances.Control.Concurrent
                       Instances.Control.Exception
                       Instances.Control.Monad.ST
                       Instances.Data.ByteString
                       Instances.Data.Char
                       Instances.Data.Data
                       Instances.Data.Dynamic
                       Instances.Data.Floating
                       Instances.Data.Functor.Identity
                       Instances.Data.Monoid
                       Instances.Data.Ord
                       Instances.Data.Proxy
                       Instances.Data.Text
                       Instances.Data.Tuple
                       Instances.Data.Typeable
                       Instances.Data.Version
                       Instances.Foreign.C.Types
                       Instances.Foreign.Ptr
                       Instances.Numeric.Natural
                       Instances.System.Exit
                       Instances.System.IO
                       Instances.System.Posix.Types
                       Instances.Text.Read

                       -- Only exports functions if using Windows
                       Instances.GHC.Conc.Windows

                       -- Only exports functions if base >= 4.4
                       Instances.GHC.Fingerprint
                       -- Only exports functions if base >= 4.4 and not using Windows
                       Instances.GHC.Event

                       -- Only exports functions if GHC >= 7.2
                       Instances.Generic
                       Instances.GHC.Generics

                       -- Only exports functions if base >= 4.5
                       Instances.GHC.Stats

                       -- Only exports functions if base >= 4.6
                       Instances.GHC.TypeLits

                       -- Only exports functions if base >= 4.7
                       Instances.Data.Type.Coercion
                       Instances.Data.Type.Equality
                       -- Only exports functions if base >= 4.7 && < 4.8
                       Instances.Data.OldTypeable

                       -- Only exports functions if base >= 4.8
                       Instances.GHC.RTS.Flags
                       Instances.GHC.StaticPtr

                       Spec.BuilderSpec
                       Spec.DerivedSpec
                       Spec.FromStringTextShowSpec
                       Spec.MkShowSpec
                       Spec.Utils

                       Spec.Control.ApplicativeSpec
                       Spec.Control.ConcurrentSpec
                       Spec.Control.ExceptionSpec
                       Spec.Control.Monad.STSpec
                       Spec.Data.ArraySpec
                       Spec.Data.BoolSpec
                       Spec.Data.ByteStringSpec
                       Spec.Data.CharSpec
                       Spec.Data.ComplexSpec
                       Spec.Data.DataSpec
                       Spec.Data.DynamicSpec
                       Spec.Data.EitherSpec
                       Spec.Data.FixedSpec
                       Spec.Data.FloatingSpec
                       Spec.Data.Functor.IdentitySpec
                       Spec.Data.IntegralSpec
                       Spec.Data.ListSpec
                       Spec.Data.MaybeSpec
                       Spec.Data.MonoidSpec
                       Spec.Data.OrdSpec
                       Spec.Data.ProxySpec
                       Spec.Data.RatioSpec
                       Spec.Data.TextSpec
                       Spec.Data.TupleSpec
                       Spec.Data.TypeableSpec
                       Spec.Data.VersionSpec
                       Spec.Foreign.C.TypesSpec
                       Spec.Foreign.PtrSpec
                       Spec.FunctionsSpec
                       Spec.Numeric.NaturalSpec
                       Spec.System.ExitSpec
                       Spec.System.IOSpec
                       Spec.System.Posix.TypesSpec
                       Spec.Text.ReadSpec

                       -- Only exports functions if using Windows
                       Spec.GHC.Conc.WindowsSpec

                       -- Only exports functions if base >= 4.4
                       Spec.GHC.FingerprintSpec
                       -- Only exports functions if base >= 4.4 and not using Windows
                       Spec.GHC.EventSpec

                       -- Only exports functions if GHC >= 7.2
                       Spec.GenericSpec
                       Spec.GHC.GenericsSpec

                       -- Only exports functions if base >= 4.5
                       Spec.GHC.StatsSpec

                       -- Only exports functions if base >= 4.6
                       Spec.GHC.TypeLitsSpec

                       -- Only exports functions if base >= 4.7
                       Spec.Data.Type.CoercionSpec
                       Spec.Data.Type.EqualitySpec
                       -- Only exports functions if base >= 4.7 && < 4.8
                       Spec.Data.OldTypeableSpec

                       -- Only exports functions if base >= 4.8
                       Spec.GHC.RTS.FlagsSpec
                       Spec.GHC.StaticPtrSpec
  build-depends:       array                >= 0.3    && < 0.6
                     , base                 >= 4.3    && < 5
                     , base-compat          >= 0.8.2  && < 1
                     , base-orphans         >= 0.3    && < 1
                     , bytestring           >= 0.9    && < 0.11
                     , bytestring-builder
                     , ghc-prim
                     , hspec                >= 2      && < 3
                     , nats                 >= 0.1    && < 2
                     , QuickCheck           >= 2.5    && < 3
                     , quickcheck-instances >= 0.1    && < 0.4
                     -- , silently             >= 1.2.4 && < 1.3
                     , tagged               >= 0.4.4  && < 1
                     , text                 >= 0.11.1 && < 1.3
                     , text-show            == 0.8.1
                     , transformers         >= 0.2.1  && < 0.5
                     , transformers-compat  >= 0.3    && < 1
                     , void                 >= 0.5    && < 1
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
  include-dirs:        include
  includes:            overlap.h
                     , utils.h
  install-includes:    overlap.h
                     , utils.h
