name:                text-show
version:             2.1.2
synopsis:            Efficient conversion of values into Text
description:         @text-show@ offers a replacement for the @Show@ typeclass intended
                     for use with @Text@ instead of @String@s. This package was created
                     in the spirit of
                     @<http://hackage.haskell.org/package/bytestring-show bytestring-show>@.
                     .
                     At the moment, @text-show@ provides instances for most data
                     types in the @<http://hackage.haskell.org/package/array array>@,
                     @<http://hackage.haskell.org/package/base base>@,
                     @<http://hackage.haskell.org/package/bytestring bytestring>@, and
                     @<http://hackage.haskell.org/package/text text>@ packages.
                     Therefore, much of the source code for @text-show@ consists of
                     borrowed code from those packages in order to ensure that the
                     behaviors of @Show@ and @TextShow@ coincide.
                     .
                     For most uses, simply importing "TextShow"
                     will suffice:
                     .
                     @
                        module Main where
                        .
                        import TextShow
                        .
                        main :: IO ()
                        main = printT (Just \"Hello, World!\")
                     @
                     .
                     If you desire it, there are also monomorphic versions of the @showb@
                     function available in the submodules of "TextShow". See the
                     <https://github.com/RyanGlScott/text-show/wiki/Naming-conventions naming conventions>
                     page for more information.
                     .
                     Support for automatically deriving @TextShow@ instances can be found
                     in the "TextShow.TH" and "TextShow.Generic" modules.
homepage:            https://github.com/RyanGlScott/text-show
bug-reports:         https://github.com/RyanGlScott/text-show/issues
license:             BSD3
license-file:        LICENSE
author:              Ryan Scott
maintainer:          Ryan Scott <ryan.gl.scott@gmail.com>
stability:           Provisional
copyright:           (C) 2014-2015 Ryan Scott
category:            Text
build-type:          Simple
tested-with:         GHC == 7.0.4
                   , GHC == 7.2.2
                   , GHC == 7.4.2
                   , GHC == 7.6.3
                   , GHC == 7.8.4
                   , GHC == 7.10.3
extra-source-files:  CHANGELOG.md, README.md, include/*.h
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/text-show

flag developer
  description:         Operate in developer mode (allows for faster recompilation of tests)
  default:             False
  manual:              True

library
  exposed-modules:     TextShow
                       TextShow.Control.Applicative
                       TextShow.Control.Concurrent
                       TextShow.Control.Exception
                       TextShow.Control.Monad.ST
                       TextShow.Data.Array
                       TextShow.Data.Bool
                       TextShow.Data.ByteString
                       TextShow.Data.Char
                       TextShow.Data.Complex
                       TextShow.Data.Data
                       TextShow.Data.Dynamic
                       TextShow.Data.Either
                       TextShow.Data.Fixed
                       TextShow.Data.Floating
                       TextShow.Data.Functor.Identity
                       TextShow.Debug.Trace
                       TextShow.Debug.Trace.Generic
                       TextShow.Debug.Trace.TH
                       TextShow.Generic
                       TextShow.Data.Integral
                       TextShow.Data.List
                       TextShow.Data.Maybe
                       TextShow.Data.Monoid
                       TextShow.Data.Ord
                       TextShow.Data.Proxy
                       TextShow.Data.Ratio
                       TextShow.Data.Text
                       TextShow.Data.Tuple
                       TextShow.Data.Typeable
                       TextShow.Data.Version
                       TextShow.Data.Void
                       TextShow.Foreign.C.Types
                       TextShow.Foreign.Ptr
                       TextShow.Functions
                       TextShow.GHC.Generics
                       TextShow.Numeric.Natural
                       TextShow.System.Exit
                       TextShow.System.IO
                       TextShow.System.Posix.Types
                       TextShow.Text.Read
                       TextShow.TH

                       -- Only exports functions if using Windows
                       TextShow.GHC.Conc.Windows

                       -- Only exports functions if base >= 4.4
                       TextShow.GHC.Fingerprint
                       -- Only exports functions if base >= 4.4 and not using Windows
                       TextShow.GHC.Event

                       -- Only exports functions if base >= 4.5
                       TextShow.GHC.Stats

                       -- Only exports functions if base >= 4.6
                       TextShow.GHC.TypeLits

                       -- Only exports functions if base >= 4.7
                       TextShow.Data.Type.Coercion
                       TextShow.Data.Type.Equality
                       -- Only exports functions if base >= 4.7 && < 4.8
                       TextShow.Data.OldTypeable

                       -- Only exports functions if base >= 4.8
                       TextShow.GHC.RTS.Flags
                       TextShow.GHC.StaticPtr
  other-modules:       TextShow.Classes
                       TextShow.Data.Typeable.Utils
                       TextShow.FromStringTextShow
                       TextShow.Instances
                       TextShow.TH.Internal
                       TextShow.TH.Names
                       TextShow.Utils
  build-depends:       array              >= 0.3     && < 0.6
                     , base               >= 4.3     && < 5
                     , base-compat        >= 0.8.1   && < 1
                     , bytestring         >= 0.9     && < 0.11
                     , bytestring-builder
                     , containers         >= 0.1     && < 0.6
                     , generic-deriving   >= 1.9     && < 2
                     , ghc-prim
                     , integer-gmp
                     , nats               >= 0.1     && < 2
                     , semigroups         >= 0.16.1  && < 1
                     , tagged             >= 0.4.4   && < 1
                     , text               >= 0.11.1  && < 1.3
                     , template-haskell   >= 2.5     && < 2.12
                     , transformers       >= 0.2.1   && < 0.5
                     , void               >= 0.5     && < 1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  include-dirs:        include
  includes:            inline.h
                     , utils.h
  install-includes:    inline.h
                     , utils.h

test-suite spec
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:       Derived.DataFamilies
                       Derived.DatatypeContexts
                       Derived.ExistentialQuantification
                       Derived.Infix
                       Derived.MagicHash
                       Derived.PolyKinds
                       Derived.RankNTypes
                       Derived.Records
                       Derived.TypeSynonyms

                       Instances.Control.Applicative
                       Instances.Control.Concurrent
                       Instances.Control.Exception
                       Instances.Control.Monad.ST
                       Instances.Data.ByteString
                       Instances.Data.Char
                       Instances.Data.Data
                       Instances.Data.Dynamic
                       Instances.Data.Floating
                       Instances.Data.Functor.Identity
                       Instances.Data.Monoid
                       Instances.Data.Ord
                       Instances.Data.Proxy
                       Instances.Data.Text
                       Instances.Data.Tuple
                       Instances.Data.Typeable
                       Instances.Data.Version
                       Instances.Foreign.C.Types
                       Instances.Foreign.Ptr
                       Instances.FromStringTextShow
                       Instances.Generic
                       Instances.GHC.Generics
                       Instances.Numeric.Natural
                       Instances.System.Exit
                       Instances.System.IO
                       Instances.System.Posix.Types
                       Instances.Text.Read
                       Instances.Utils

                       -- Only exports instances if using Windows
                       Instances.GHC.Conc.Windows

                       -- Only exports instances if base >= 4.4
                       Instances.GHC.Fingerprint
                       -- Only exports instances if base >= 4.4 and not using Windows
                       Instances.GHC.Event

                       -- Only exports instances if base >= 4.5
                       Instances.GHC.Stats

                       -- Only exports instances if base >= 4.6
                       Instances.GHC.TypeLits

                       -- Only exports instances if base >= 4.7
                       Instances.Data.Type.Coercion
                       Instances.Data.Type.Equality
                       -- Only exports instances if base >= 4.7 && < 4.8
                       Instances.Data.OldTypeable

                       -- Only exports instances if base >= 4.8
                       Instances.GHC.RTS.Flags
                       Instances.GHC.StaticPtr

                       Spec.BuilderSpec
                       Spec.Control.ApplicativeSpec
                       Spec.Control.ConcurrentSpec
                       Spec.Control.ExceptionSpec
                       Spec.Control.Monad.STSpec
                       Spec.Data.ArraySpec
                       Spec.Data.BoolSpec
                       Spec.Data.ByteStringSpec
                       Spec.Data.CharSpec
                       Spec.Data.ComplexSpec
                       Spec.Data.DataSpec
                       Spec.Data.DynamicSpec
                       Spec.Data.EitherSpec
                       Spec.Data.FixedSpec
                       Spec.Data.FloatingSpec
                       Spec.Data.Functor.IdentitySpec
                       Spec.Data.IntegralSpec
                       Spec.Data.ListSpec
                       Spec.Data.MaybeSpec
                       Spec.Data.MonoidSpec
                       Spec.Data.OrdSpec
                       Spec.Data.ProxySpec
                       Spec.Data.RatioSpec
                       Spec.Data.TextSpec
                       Spec.Data.TupleSpec
                       Spec.Data.TypeableSpec
                       Spec.Data.VersionSpec
                       Spec.Derived.DatatypeContextsSpec
                       Spec.Derived.ExistentialQuantificationSpec
                       Spec.Derived.InfixSpec
                       Spec.Derived.MagicHashSpec
                       Spec.Derived.PolyKindsSpec
                       Spec.Derived.RankNTypesSpec
                       Spec.Derived.RecordsSpec
                       Spec.Derived.TypeSynonymsSpec
                       Spec.Foreign.C.TypesSpec
                       Spec.Foreign.PtrSpec
                       Spec.FromStringTextShowSpec
                       Spec.FunctionsSpec
                       Spec.GenericSpec
                       Spec.GHC.GenericsSpec
                       Spec.Numeric.NaturalSpec
                       Spec.System.ExitSpec
                       Spec.System.IOSpec
                       Spec.System.Posix.TypesSpec
                       Spec.Text.ReadSpec
                       Spec.Utils

                       -- Only exports tests if using Windows
                       Spec.GHC.Conc.WindowsSpec

                       -- Only exports tests if base >= 4.4
                       Spec.GHC.FingerprintSpec
                       -- Only exports tests if base >= 4.4 and not using Windows
                       Spec.GHC.EventSpec

                       -- Only exports tests if base >= 4.5
                       Spec.GHC.StatsSpec

                       -- Only exports tests if template-haskell >= 2.7
                       Spec.Derived.DataFamiliesSpec

                       -- Only exports tests if base >= 4.6
                       Spec.GHC.TypeLitsSpec

                       -- Only exports tests if base >= 4.7
                       Spec.Data.Type.CoercionSpec
                       Spec.Data.Type.EqualitySpec
                       -- Only exports tests if base >= 4.7 && < 4.8
                       Spec.Data.OldTypeableSpec

                       -- Only exports tests if base >= 4.8
                       Spec.GHC.RTS.FlagsSpec
                       Spec.GHC.StaticPtrSpec

                       TransformersCompat
  build-depends:       array                >= 0.3    && < 0.6
                     , base                 >= 4.3    && < 5
                     , base-compat          >= 0.8.2  && < 1
                     , base-orphans         >= 0.4.2  && < 1
                     , bifunctors           >= 5.1    && < 6
                     , bytestring           >= 0.9    && < 0.11
                     , bytestring-builder
                     , generic-deriving     >= 1.9    && < 2
                     , ghc-prim
                     , hspec                >= 2      && < 3
                     , nats                 >= 0.1    && < 2
                     , QuickCheck           >= 2.5    && < 3
                     , quickcheck-instances >= 0.1    && < 0.4
                     , tagged               >= 0.8.1  && < 1
                     , text                 >= 0.11.1 && < 1.3
                     , transformers         >= 0.2.1  && < 0.5
                     , transformers-compat  >= 0.3    && < 1
                     , void                 >= 0.5    && < 1
  if flag(developer)
    build-depends:     containers           >= 0.1    && < 0.6
                     , integer-gmp
                     , semigroups           >= 0.16.1 && < 1
                     , template-haskell     >= 2.5    && < 2.12
  else
    build-depends:     text-show            == 2.1.2

  hs-source-dirs:      tests
  if flag(developer)
    hs-source-dirs:    src

  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts
  include-dirs:        include
  includes:            generic.h
                     , overlap.h
                     , utils.h
  install-includes:    generic.h
                     , overlap.h
                     , utils.h
